# 42sh

42sh/: Makefile.am  configure.ac
42sh/src/: Makefile.am  main.c
42sh/src/ast/: ast.c  ast.h
42sh/src/evaluate/: Makefile.am  evaluate.c  evaluate.h
42sh/src/lexer/: lexer.c  lexer.h  token.h
42sh/src/parser/: parser.c  parser.h
42sh/tests/: Makefile.am  Usual-Makefile  ast_display.sh  dot.sh  rm_trash_files.sh  script.sh  test_evaluate.c  test_lexer.c  test_parser.c  tests.sh
